--- a/modul-optimasi-pilihan-paling-tepat-rtp.html
+++ b/modul-optimasi-pilihan-paling-tepat-rtp.html
@@ -2502,8 +2502,8 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
       <img src="https://google.drive03.com/gacorpg/ongong-khi/40.png" style="width: 100%; border-radius: 12px; box-shadow: 0 0 12px rgba(255, 0, 0, 0); margin-bottom: 16px;border-width: 2px; border-color: #228000; border-style: solid" />
 
       <div style="display: flex; justify-content: space-between; width: 100%; gap: 10px;">
-        <a href="https://google.drive03.com/gacorpg/ongong-khi/" class="regisoverlay"> DAFTAR </a>
-        <a href="https://google.drive03.com/gacorpg/ongong-khi/" class="loginoverlay"> LOGIN </a>
+        <a href="https://masuk-sini.it.com/gacorpg" class="regisoverlay"> DAFTAR </a>
+        <a href="https://masuk-sini.it.com/gacorpg" class="loginoverlay"> LOGIN </a>
       </div>
 
 
@@ -2567,3 +2567,4 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"559a2e2f1cc745a6ac5d13b7fe3673cc","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"f7e648f1e0e64d0c97dee5c2c9f32cb5","server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 </body><script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'},{'ap':'cpbh-mt'},{'server':'sg2plmcpnl492007'},{'dcenter':'sg2'},{'cp_id':'10374917'},{'cp_cl':'8'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src='https://img1.wsimg.com/traffic-assets/js/tccl.min.js'></script></html>
+
