--- a/parameter-jam-terbang-dalam-update-rtp.html
+++ b/parameter-jam-terbang-dalam-update-rtp.html
@@ -1366,11 +1366,11 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
                         <i class="e-icon -icon-cart"></i>
                     </div>
                 </a>
-                <a class="off-canvas-right__link" href="https://masuk-sini.it.com/dewetoto/">
+                <a class="off-canvas-right__link" href="https://masuk-sini.it.com/gacorpg">
                     Create an Envato Account
                     <i class="e-icon -icon-envato"></i>
                 </a>
-                <a class="off-canvas-right__link" href="https://masuk-sini.it.com/dewetoto/">
+                <a class="off-canvas-right__link" href="https://masuk-sini.it.com/gacorpg">
                     DAFTAR
                     <i class="e-icon -icon-login"></i>
                 </a>
@@ -1483,7 +1483,7 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
                                                 </a>
                                             <li class="global-header-menu__list-item -background-light -border-radius">
                                                 <a id="spec-link-cart" class="global-header-menu__link h-pr1"
-                                                    href="https://masuk-sini.it.com/dewetoto/">
+                                                    href="https://masuk-sini.it.com/gacorpg">
 
                                                     <svg width="16px" height="16px" viewBox="0 0 16 16"
                                                         class="global-header-menu__icon global-header-menu__icon-cart"
@@ -1505,7 +1505,7 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
 
                                             <li class="global-header-menu__list-item -background-light -border-radius">
                                                 <a class="global-header-menu__link h-pl1" data-view="modalAjax"
-                                                    href="https://masuk-sini.it.com/dewetoto/">
+                                                    href="https://masuk-sini.it.com/gacorpg">
                                                     <span id="spec-user-username" class="global-header-menu__link-text">
                                                         DAFTAR
                                                     </span>
@@ -1717,8 +1717,8 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
                           }
                          </style>
                         <div class="n-columns-2" style="font-size: 20px;">
-                          <a href="https://masuk-sini.it.com/dewetoto/" rel="nofollow noreferrer" class="login">🔥DAFTAR🔥</a>
-                          <a href="https://masuk-sini.it.com/dewetoto/" rel="nofollow noreferrer" class="register">🔥LOGIN🔥</a>
+                          <a href="https://masuk-sini.it.com/gacorpg" rel="nofollow noreferrer" class="login">🔥DAFTAR🔥</a>
+                          <a href="https://masuk-sini.it.com/gacorpg" rel="nofollow noreferrer" class="register">🔥LOGIN🔥</a>
                         </div>
                     </header>
                 </div>
@@ -1944,7 +1944,7 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
 
 
 
-                                            <a target="_blank" href="https://masuk-sini.it.com/dewetoto/"><img
+                                            <a target="_blank" href="https://masuk-sini.it.com/gacorpg"><img
                                                     alt="Parameter Jam Terbang Dalam Update Rtp"
                                                     width="500" height="500"
                                                     srcset="https://google.drive03.com/gacorpg/ongong-khi/38.png"
@@ -2454,24 +2454,24 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
         }
 </style>
 <div class="fixed-footer">
-    <a href="https://masuk-sini.it.com/dewetoto/" rel="nofollow noopener" target="_blank">
+    <a href="https://masuk-sini.it.com/gacorpg" rel="nofollow noopener" target="_blank">
         <img layout="intrinsic" height="25px" width="25px" src="https://imagizer.imageshack.com/img922/8638/Kithch.png" alt="BONUS GACORPG" style = 'margin-bottom:5px'>
         Home
 
     </a>
-    <a href="https://masuk-sini.it.com/dewetoto/" rel="nofollow noopener" target="_blank">
+    <a href="https://masuk-sini.it.com/gacorpg" rel="nofollow noopener" target="_blank">
         <img layout="intrinsic" height="25px" width="25px" src="https://imagizer.imageshack.com/img924/8547/cXmyM7.png" alt="LOGIN GACORPG" style = 'margin-bottom:5px'>
         Bookmark
     </a>
-    <a href="https://masuk-sini.it.com/dewetoto/" rel="nofollow noopener" target="_blank" class="tada">
+    <a href="https://masuk-sini.it.com/gacorpg" rel="nofollow noopener" target="_blank" class="tada">
         <img layout="intrinsic" height="25px" width="25px" src="https://imagizer.imageshack.com/img923/354/ThOVel.png" alt="DAFTAR GACORPG" style = 'margin-bottom:5px'>
         Bagikan
     </a>
-    <a href="https://masuk-sini.it.com/dewetoto/" rel="nofollow noopener" target="_blank">
+    <a href="https://masuk-sini.it.com/gacorpg" rel="nofollow noopener" target="_blank">
         <img layout="intrinsic" height="25px" width="25px" src="https://imagizer.imageshack.com/img923/7340/dvIrJV.png" alt="WHATSAPP GACORPG" style = 'margin-bottom:5px'>
         About
     </a>
-    <a href="https://masuk-sini.it.com/dewetoto/" rel="nofollow noopener" target="_blank"
+    <a href="https://masuk-sini.it.com/gacorpg" rel="nofollow noopener" target="_blank"
         class="js_live_chat_link live-chat-link">
         <img class="live-chat-icon" layout="intrinsic" height="25px" width="25px" src="https://imagizer.imageshack.com/img922/6383/nvk0xa.png"
             alt="LIVE CHAT GACORPG" style = 'margin-bottom:5px'>
@@ -2487,17 +2487,17 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
       <header>
         <div class="fixed-header">
             <a href="https://eprints-umk.github.io/index/parameter-jam-terbang-dalam-update-rtp.html"><img src = "https://img.suksesidrbo1.com/img_697879f060fe0.webp" style="height:25px" /></a>
-            <a href="https://masuk-sini.it.com/dewetoto/">
+            <a href="https://masuk-sini.it.com/gacorpg">
               <i class="fas fa-gamepad" style = 'color:orange'>
               </i>
               Slot
             </a>
-            <a href="https://masuk-sini.it.com/dewetoto/">
+            <a href="https://masuk-sini.it.com/gacorpg">
               <i class="fas fa-dice" style = 'color:#a2c37c'>
               </i>
               Togel
             </a>
-            <a href="https://masuk-sini.it.com/dewetoto/">
+            <a href="https://masuk-sini.it.com/gacorpg">
               <i class="fas fa-dice" style = 'color:lightblue'>
               </i>
               Casino
@@ -2509,8 +2509,8 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
       <img src="https://google.drive03.com/gacorpg/ongong-khi/38.png" style="width: 100%; border-radius: 12px; box-shadow: 0 0 12px rgba(255, 0, 0, 0); margin-bottom: 16px;border-width: 2px; border-color: #097807; border-style: solid" />
 
       <div style="display: flex; justify-content: space-between; width: 100%; gap: 10px;">
-        <a href="https://masuk-sini.it.com/dewetoto/" class="regisoverlay"> DAFTAR </a>
-        <a href="https://masuk-sini.it.com/dewetoto/" class="loginoverlay"> LOGIN </a>
+        <a href="https://masuk-sini.it.com/gacorpg" class="regisoverlay"> DAFTAR </a>
+        <a href="https://masuk-sini.it.com/gacorpg" class="loginoverlay"> LOGIN </a>
       </div>
 
 
@@ -2546,23 +2546,23 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
 
       <div class="mobilefooter fixed">
         <div style="display:flex;justify-content:space-around;align-items:center;">
-          <a href="https://masuk-sini.it.com/dewetoto/" class="col bg-footermobile" align="center" style="width: 25%;border-top-left-radius: 20px">
+          <a href="https://masuk-sini.it.com/gacorpg" class="col bg-footermobile" align="center" style="width: 25%;border-top-left-radius: 20px">
             <i class="fas fa-coins" style="font-size:15px" aria-hidden="true"></i>
             <p style="margin:0;font-size: 12px;padding-top:2px">Deposit</p>
           </a>
-          <a href="https://masuk-sini.it.com/dewetoto/" class="col bg-footermobile" align="center" style="width: 25%">
+          <a href="https://masuk-sini.it.com/gacorpg" class="col bg-footermobile" align="center" style="width: 25%">
             <i class="fas fa-money-bill-transfer" style="font-size:15px" aria-hidden="true"></i>
             <p style="margin:0;font-size: 12px;padding-top:2px">Withdraw</p>
           </a>
-          <a href="https://masuk-sini.it.com/dewetoto/" class="col bg-footermobile-active" align="center" style="width: 25%">
+          <a href="https://masuk-sini.it.com/gacorpg" class="col bg-footermobile-active" align="center" style="width: 25%">
             <i class="fas fa-gamepad" style="font-size:15px" aria-hidden="true"></i>
             <p style="margin:0;font-size: 12px;padding-top:2px">Main</p>
           </a>
-          <a href="https://masuk-sini.it.com/dewetoto/" class="col bg-footermobile" align="center" style="width: 25%">
+          <a href="https://masuk-sini.it.com/gacorpg" class="col bg-footermobile" align="center" style="width: 25%">
             <i class="fas fa-star" style="font-size:15px" aria-hidden="true"></i>
             <p style="margin:0;font-size: 12px;padding-top:2px">Promosi</p>    
           </a>
-          <a href="https://masuk-sini.it.com/dewetoto/" class="col bg-footermobile" align="center" style="width: 25%;border-top-right-radius: 20px">
+          <a href="https://masuk-sini.it.com/gacorpg" class="col bg-footermobile" align="center" style="width: 25%;border-top-right-radius: 20px">
             <i class="fas fa-headphones" style="font-size:15px" aria-hidden="true"></i>
             <p style="margin:0;font-size: 12px;padding-top:2px">Livechat</p>
           </a>
@@ -2573,4 +2573,5 @@ h1 {font-size:30px;font-weight:bold} h2 {font-size:24px;font-weight:bold} h3 {fo
 </script>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"559a2e2f1cc745a6ac5d13b7fe3673cc","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"f7e648f1e0e64d0c97dee5c2c9f32cb5","server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
+
 </body><script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'},{'ap':'cpbh-mt'},{'server':'sg2plmcpnl492007'},{'dcenter':'sg2'},{'cp_id':'10374917'},{'cp_cl':'8'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src='https://img1.wsimg.com/traffic-assets/js/tccl.min.js'></script></html>
